--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,9 @@
-/* Font imports: uncomment after running npm install (e.g. with --legacy-peer-deps if needed) */
-/* @import '@fontsource/fraunces/400.css'; */
-/* @import '@fontsource/fraunces/600.css'; */
-/* @import '@fontsource/source-serif-4/400.css'; */
-/* @import '@fontsource/source-serif-4/600.css'; */
-/* @import '@fontsource/work-sans/400.css'; */
-/* @import '@fontsource/work-sans/500.css'; */
+@import '@fontsource/fraunces/400.css';
+@import '@fontsource/fraunces/600.css';
+@import '@fontsource/source-serif-4/400.css';
+@import '@fontsource/source-serif-4/600.css';
+@import '@fontsource/work-sans/400.css';
+@import '@fontsource/work-sans/500.css';
 
 @tailwind base;
 @tailwind components;
